[gd_scene load_steps=4 format=2]

[ext_resource path="res://Escenas/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Escenas/Scripts/LogicaBoton.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
custom_solver_bias = 1.0
extents = Vector2( 51, 25.5 )

[node name="Boton" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="BotonSpriteSP" type="Sprite" parent="."]
position = Vector2( 7.62939e-06, 3.8147e-06 )
scale = Vector2( 0.2, 0.2 )

[node name="BotonSpriteP" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.2, 0.2 )

[node name="HitBox" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 1 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_HitBox_body_exited"]

[editable path="HitBox"]
